<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="250dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="10dp"
    android:elevation="8dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <TextView
            android:id="@+id/tv_broj_sifraZaposleni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="152dp"
            android:text="@string/_12345678"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.321"
            app:layout_constraintStart_toEndOf="@+id/tv_sifraZaposleni"
            app:layout_constraintTop_toBottomOf="@+id/tv_pravo_prezime" />

        <TextView
            android:id="@+id/tv_grad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/grad_"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sifraZaposleni" />

        <TextView
            android:id="@+id/tv_ime_naziv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="160dp"
            android:text="@string/darko"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.134"
            app:layout_constraintStart_toEndOf="@+id/tv_ime"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_pravo_prezime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="168dp"
            android:text="@string/peric"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_prezime"
            app:layout_constraintTop_toBottomOf="@+id/tv_ime_naziv" />

        <TextView
            android:id="@+id/tv_sifraZaposleni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/sifra_"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_prezime"
            app:layout_constraintVertical_bias="0.036" />

        <TextView
            android:id="@+id/tv_ime_grada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="176dp"
            android:text="@string/negotin"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.36"
            app:layout_constraintStart_toEndOf="@+id/tv_grad"
            app:layout_constraintTop_toBottomOf="@+id/tv_broj_sifraZaposleni" />

        <TextView
            android:id="@+id/tv_ime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/ime_"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_prezime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/prezime_"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ime" />

        <TextView
            android:id="@+id/tv_magacin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/magacin_"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_grad"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tv_broj_magacina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="72dp"
            android:layout_marginBottom="16dp"
            android:text="@string/drugi_magacin"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.285"
            app:layout_constraintStart_toEndOf="@+id/tv_magacin"
            app:layout_constraintTop_toBottomOf="@+id/tv_ime_grada"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>