<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.LoginFragment"
    android:background="@color/gray_400">


    <EditText
        android:id="@+id/et_userLog"
        android:layout_width="285dp"
        android:layout_height="55dp"
        android:layout_marginTop="248dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:textColorHint="@color/purple_800"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_passwordLog"
        android:layout_width="285dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColorHint="@color/purple_800"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_userLog" />

    <Button
        android:id="@+id/buttonLog"
        android:layout_width="207dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:text="@string/Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_passwordLog" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/ili"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLog" />

    <Button
        android:id="@+id/buttonLogReg"
        android:layout_width="207dp"
        android:layout_height="52dp"
        android:layout_marginBottom="148dp"
        android:text="@string/Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.19" />


</androidx.constraintlayout.widget.ConstraintLayout>