<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.RegisterFragment"
    android:background="@color/gray_400">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="285dp"
        android:layout_height="55dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:textColorHint="@color/purple_800"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26999998" />

    <EditText
        android:id="@+id/et_user"
        android:layout_width="285dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:textColorHint="@color/purple_800"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />


    <EditText
        android:id="@+id/et_password"
        android:layout_width="285dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColorHint="@color/purple_800"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user" />

    <Button
        android:id="@+id/buttonReg"
        android:layout_width="207dp"
        android:layout_height="52dp"
        android:text="@string/Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintVertical_bias="0.100000024" />




</androidx.constraintlayout.widget.ConstraintLayout>