<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_400"
    tools:context=".view.KupacFragment">

    <EditText
        android:id="@+id/et_naziv_kupac"
        android:layout_width="285dp"
        android:layout_height="55dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/naziv"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:textColorHint="@color/purple_800"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23000002" />

    <EditText
        android:id="@+id/et_PIB_kupac"
        android:layout_width="285dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/pib"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:textColorHint="@color/purple_800"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_naziv_kupac" />

    <EditText
        android:id="@+id/et_sifra_kupac"
        android:layout_width="285dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/sifra"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:textColorHint="@color/purple_800"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_PIB_kupac" />

    <Button
        android:id="@+id/buttonDodajKupca"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:text="@string/dodaj"
        android:layout_marginHorizontal="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerOdabirZaposlenog"
        app:layout_constraintVertical_bias="0.32999998" />

    <Spinner
        android:id="@+id/spinnerOdabirZaposlenog"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_sifra_kupac" />

</androidx.constraintlayout.widget.ConstraintLayout>